tests/invalid/annotation_unsupported_generic_dict/main.py
def main() -> None:
    d: dict[int, int] = 0
